# caii-voice-server

./: .coverage  .env.example  .gitignore  README.md  caii-voice-server.service  main.py  pyproject.toml  requirements.txt  server.py  setup.sh
app/: __init__.py  config.py  dependencies.py
app/api/routes/: __init__.py  health.py  stt.py  tts.py  voice.py
app/middleware/: auth.py  rate_limit.py
client/: __init__.py
client/stt/: __init__.py  config.py  hotkey.py  injector.py  main.py  recorder.py  transcriber.py
client/tts/: __init__.py
deploy/: caii-voice-ptt.service  caii-voice-server.service  install.sh  setup.sh  uninstall.sh
plans/: medium-term-hardening.md  short-term-security.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_api_endpoints.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_dependencies.py
tests/unit/api/routes/: __init__.py  test_health.py
tests/unit/client/stt/: test_config.py  test_hotkey.py  test_injector.py  test_main.py  test_recorder.py  test_transcriber.py
voices/: .gitignore  voices.json
